; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tools/tests/superpages/extr_testsp.c_test_deallocate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tools/tests/superpages/extr_testsp.c_test_deallocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SUPERPAGE_SIZE = common dso_local global i32 0, align 4
@global_addr = common dso_local global i32 0, align 4
@error = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"skipped deallocation\00", align 1
@FALSE = common dso_local global i32 0, align 4
@global_size = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"mach_vm_deallocate\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test_deallocate() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i32, i32* @SUPERPAGE_SIZE, align 4
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* @global_addr, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %0
  %9 = load i32, i32* @error, align 4
  %10 = call i32 @sprintf(i32 %9, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %1, align 4
  br label %31

12:                                               ; preds = %0
  %13 = call i32 (...) @mach_task_self()
  %14 = load i32, i32* @global_addr, align 4
  %15 = load i32, i32* @global_size, align 4
  %16 = call i32 @mach_vm_deallocate(i32 %13, i32 %14, i32 %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @check_kr(i32 %17, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  store i32 %18, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %12
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %1, align 4
  br label %31

22:                                               ; preds = %12
  %23 = load i32, i32* @global_addr, align 4
  %24 = load i32, i32* %2, align 4
  %25 = call i32 @check_nr(i32 %23, i32 %24, i32* null)
  store i32 %25, i32* %4, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %29, label %27

27:                                               ; preds = %22
  %28 = load i32, i32* %4, align 4
  store i32 %28, i32* %1, align 4
  br label %31

29:                                               ; preds = %22
  %30 = load i32, i32* @TRUE, align 4
  store i32 %30, i32* %1, align 4
  br label %31

31:                                               ; preds = %29, %27, %20, %8
  %32 = load i32, i32* %1, align 4
  ret i32 %32
}

declare dso_local i32 @sprintf(i32, i8*) #1

declare dso_local i32 @mach_vm_deallocate(i32, i32, i32) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @check_kr(i32, i8*) #1

declare dso_local i32 @check_nr(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
